--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,3 +8,5 @@ vscode:
     - formulahendry.auto-close-tag@0.5.6:oZ/8R2VhZEhkHsoeO57hSw==
     - mkaufman.HTMLHint@0.6.0:TdNYbCmjW8N3yiaPW4/adg==
     - eventyret.bootstrap-4-cdn-snippet@1.3.0:3EJTfpRZ7YoP6Ty3NIdt5Q==
+ports:
+  - port: 3306 
